--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -14,5 +14,7 @@
 
 @import "./base";
 @import "./layout/sidebar";
+@import "./layout/addNewAdmin";
+@import "./layout/seeMore";
 
 @import "./pages/admin";
