--- a/layout/editAdminModal.ejs
+++ b/layout/editAdminModal.ejs
@@ -40,8 +40,7 @@
 				<h2 class="h3 fw-bold mb-5">Verification</h2>
 				<div class="d-flex justify-content-between">
 					<h3 class="h4 fw-bold d-flex align-items-center mb-5">
-						<span class="material-symbols-outlined text-primary me-2">
-							check_circle </span
+						<span class="material-icons text-primary me-2"> check_circle </span
 						>Verified
 					</h3>
 					<time datetime="2020-4-12">2020/4/12</time>
@@ -112,8 +111,8 @@
 				<hr class="mb-7" />
 				<h2 class="h3 fw-bold mb-4">Deactivate Account</h2>
 				<h3 class="h4 text-secondary d-flex align-items-center mb-5">
-					<span class="material-symbols-outlined me-2"> warning </span>This
-					cannot be undone!
+					<span class="material-icons me-2"> warning </span>This cannot be
+					undone!
 				</h3>
 				<div class="d-grid mb-7">
 					<button type="submit" class="btn btn-outline-secondary p-3">
