--- a/layout/newAdminButton.ejs
+++ b/layout/newAdminButton.ejs
@@ -1,8 +1,7 @@
 <button
 	type="button"
-	class="btn d-flex align-items-center fs-4 fw-bold p-0 pe-1 add-new-admin"
+	class="btn d-flex align-items-center fs-4 fw-bold p-0 pe-1 navbar-btn"
 	data-bs-toggle="modal"
 	data-bs-target="#addNewAdmin">
-	<span class="material-symbols-outlined text-primary me-2"> add </span>Add New
-	Admin
+	<span class="material-icons text-primary me-2"> add </span>Add New Admin
 </button>
