--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -538,7 +538,7 @@ $container-max-widths: (
 // Set the number of columns and specify the width of the gutters.
 
 $grid-columns: 12 !default;
-$grid-gutter-width: 1.875rem !default;
+$grid-gutter-width: 2rem !default;
 $grid-row-columns: 6 !default;
 
 // Container padding
@@ -865,7 +865,7 @@ $btn-link-hover-color: var(--#{$prefix}link-hover-color) !default;
 $btn-link-disabled-color: $gray-600 !default;
 
 // Allows for customizing button radius independently from global border radius
-$btn-border-radius: var(--#{$prefix}border-radius) !default;
+$btn-border-radius: 2px; // var(--#{$prefix}border-radius) !default;
 $btn-border-radius-sm: var(--#{$prefix}border-radius-sm) !default;
 $btn-border-radius-lg: var(--#{$prefix}border-radius-lg) !default;
 
@@ -1368,7 +1368,7 @@ $pagination-border-color: $primary; // var(--#{$prefix}border-color) !default;
 
 $pagination-focus-color: var(--#{$prefix}link-hover-color) !default;
 $pagination-focus-bg: var(--#{$prefix}secondary-bg) !default;
-$pagination-focus-box-shadow: $focus-ring-box-shadow !default;
+$pagination-focus-box-shadow: none; //$focus-ring-box-shadow !default;
 $pagination-focus-outline: 0 !default;
 
 $pagination-hover-color: var(--#{$prefix}link-hover-color) !default;
@@ -1661,9 +1661,9 @@ $list-group-item-color-scale: 40% !default; // Deprecated in v5.3.0
 // fusv-enable
 
 $list-group-hover-bg: var(--#{$prefix}tertiary-bg) !default;
-$list-group-active-color: $component-active-color !default;
-$list-group-active-bg: $component-active-bg !default;
-$list-group-active-border-color: $list-group-active-bg !default;
+$list-group-active-color: $gray-900; //$component-active-color !default;
+$list-group-active-bg: $gray-100; //$component-active-bg !default;
+$list-group-active-border-color: $gray-400; //$list-group-active-bg !default;
 
 $list-group-disabled-color: var(--#{$prefix}secondary-color) !default;
 $list-group-disabled-bg: $list-group-bg !default;
@@ -1799,7 +1799,7 @@ $offcanvas-backdrop-opacity: $modal-backdrop-opacity !default;
 // Code
 
 $code-font-size: $small-font-size !default;
-$code-color: $pink !default;
+$code-color: $primary; // $pink !default;
 
 $kbd-padding-y: 0.1875rem !default;
 $kbd-padding-x: 0.375rem !default;
