--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,8 +1,10 @@
+// font style
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
-
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
 
-@import "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0";
+// icons
+@import "https://fonts.googleapis.com/icon?family=Material+Icons+Outlined";
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
 
 @import "../../node_modules/bootstrap/scss/functions";
 @import "./variables";
@@ -18,3 +20,4 @@
 @import "./layout/seeMore";
 
 @import "./pages/admin";
+@import "./pages/assignment";
