--- a/layout/editAdminSuccess.ejs
+++ b/layout/editAdminSuccess.ejs
@@ -7,7 +7,7 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-body text-primary fw-bold d-flex align-items-center">
-				<span class="material-symbols-outlined me-2"> check_circle </span>
+				<span class="material-icons me-2"> check_circle </span>
 				Successfully Edited !!
 			</div>
 		</div>
