--- a/layout/newAdminModal.ejs
+++ b/layout/newAdminModal.ejs
@@ -34,8 +34,7 @@
 				<hr class="text-gray-500 mb-7" />
 				<h2 class="h3 fw-bold mb-5">Verification</h2>
 				<h3 class="h4 fw-bold d-flex align-items-center mb-5">
-					<span class="material-symbols-outlined text-secondary me-2">
-						warning </span
+					<span class="material-icons text-secondary me-2"> warning </span
 					>Unverified
 				</h3>
 				<div class="d-grid mb-7">
