--- a/layout/sidebar.ejs
+++ b/layout/sidebar.ejs
@@ -1,4 +1,5 @@
-<nav class="sidebar bg-light d-flex flex-column justify-content-between py-8">
+<nav
+	class="sidebar bg-light d-flex flex-column justify-content-between py-8 min-vh-100">
 	<div class="sidebar-top">
 		<h1 class="mb-7">
 			<a class="px-8" href="###"
@@ -6,51 +7,44 @@
 			/></a>
 		</h1>
 		<ul class="list-unstyled sidebar-menu">
-			<li class="mb-4">
-				<a class="text-gray-900 fs-4 fw-bold px-8" href="###"
-					><span class="material-symbols-outlined me-3 align-middle py-1">
-						insert_chart </span
+			<li>
+				<a class="text-gray-900 fs-4 fw-bold px-8 py-3 d-block" href="###">
+					<span class="material-icons me-3 align-middle"> insert_chart </span
 					>Dashboard</a
 				>
 			</li>
-			<li class="mb-4">
-				<a class="text-gray-900 fs-4 py-1 fw-bold px-8" href="###"
-					><span class="material-symbols-outlined me-3 align-middle py-1">
-						forum </span
+			<li>
+				<a class="text-gray-900 fs-4 py-1 fw-bold px-8 py-3 d-block" href="###"
+					><span class="material-icons me-3 align-middle"> forum </span
 					>Question</a
 				>
 			</li>
-			<li class="mb-4">
+			<li>
 				<a
-					class="fs-4 py-1 fw-bold px-8 <%= page === 'assignment' ? 'text-primary' : 'text-gray-900' %>"
+					class="fs-4 py-1 fw-bold px-8 py-3 d-block <%= page === 'assignment' ? 'text-primary border-start border-4 border-primary' : 'text-gray-900' %>"
 					href="./assignment.html"
-					><span class="material-symbols-outlined me-3 align-middle py-1">
-						assignment </span
+					><span class="material-icons me-3 align-middle"> assignment </span
 					>Assignment</a
 				>
 			</li>
-			<li class="mb-4">
-				<a class="text-gray-900 fs-4 py-1 fw-bold px-8" href="###"
-					><span class="material-symbols-outlined me-3 align-middle py-1">
-						video_library </span
+			<li>
+				<a class="text-gray-900 fs-4 py-1 fw-bold px-8 py-3 d-block" href="###"
+					><span class="material-icons me-3 align-middle"> video_library </span
 					>Course</a
 				>
 			</li>
-			<li class="mb-4">
+			<li>
 				<a
-					class="fs-4 py-1 fw-bold px-8 <%= page === 'admin' ? 'text-primary border-start border-4 border-primary' : 'text-gray-900' %>"
+					class="fs-4 py-1 fw-bold px-8 py-3 d-block <%= page === 'admin' ? 'text-primary border-start border-4 border-primary' : 'text-gray-900' %>"
 					href="./admin.html"
-					><span class="material-symbols-outlined me-3 align-middle py-1">
-						group </span
-					>Admin</a
+					><span class="material-icons me-3 align-middle"> group </span>Admin</a
 				>
 			</li>
-			<li class="mb-4">
-				<a class="text-gray-900 fs-4 py-1 fw-bold px-8" href="###"
-					><span class="material-symbols-outlined me-3 align-middle py-1">
-						settings </span
-					>Settings</a
-				>
+			<li>
+				<a class="text-gray-900 fs-4 py-1 fw-bold px-8 py-3 d-block" href="###">
+					<span class="material-icons me-3 align-middle"> settings </span
+					>Settings
+				</a>
 			</li>
 		</ul>
 	</div>
@@ -58,7 +52,7 @@
 		<div class="member-img me-4"></div>
 		<div class="member-info">
 			<h3 class="fs-4 mb-1 fw-bold">Andy Chen</h3>
-			<h4 class="text-gray-600 fs-5">andy0401@mail.com</h4>
+			<h4 class="text-gray-600 fs-5 m-0">andy0401@mail.com</h4>
 		</div>
 	</div>
 </nav>
